--- a/patternlab-config.json
+++ b/patternlab-config.json
@@ -28,7 +28,7 @@
   },
   "styleGuideExcludes": [
   ],
-  "defaultPattern": "all",
+  "defaultPattern": "homepage",
   "defaultShowPatternInfo": false,
   "cleanPublic" : true,
   "patternExtension": "mustache",
